@@ -147,6 +147,7 @@ Supported Presently
 Changelog for 1.3.44
 * Allow blank salutations, bug 1204. (Chris T)
 * Easier creation of select widgets with blanks. (Chris T)
+* Display vendor's sku if available on orders and invoices, bug 1218 (Chris T)
 
 Chris T is Chris Travers
 
